--- a/frontend/src/Components/authComponent/WelcomePage.module.css
+++ b/frontend/src/Components/authComponent/WelcomePage.module.css
@@ -67,12 +67,14 @@ box-shadow: 2px 2px 20px black;
     animation: moveInRight 0.7s ease;
 }
 .button_container {
+    position: fixed;
     margin-top: 4rem;
     display: flex;
     margin-left: 8rem;
 }
 
 .btn {
+    
     padding: 10px 20px;
     margin: 10px;
     font-size: 16px;
