--- a/frontend/src/Components/authComponent/WelcomePage.module.css
+++ b/frontend/src/Components/authComponent/WelcomePage.module.css
@@ -32,6 +32,18 @@ box-shadow: 2px 2px 20px black;
     margin-left: 4rem;
     
 }
+.welcome{
+    height: 100vh;
+    width: 100%;
+    /* background-image: linear-gradient(to top left, rgba(0, 0, 255, 0.4), rgba(144, 10, 228, 0.3)); */
+    /* display: flex;
+    flex-direction: column; */
+    /* background-color:blue; */
+    background-image: url(../../assets/background3.jpeg);
+    background-size: cover;
+    /* background-repeat: no-repeat; */
+    position: relative;
+}
 .heading_primary{
     font-size: 2.2rem;
     letter-spacing: 8px;
@@ -67,7 +79,7 @@ box-shadow: 2px 2px 20px black;
     animation: moveInRight 0.7s ease;
 }
 .button_container {
-    position: fixed;
+    /* position: fixed; */
     margin-top: 4rem;
     display: flex;
     margin-left: 8rem;
@@ -80,7 +92,6 @@ box-shadow: 2px 2px 20px black;
     font-size: 16px;
     cursor: pointer;
     background-color: #c6d4d2;
-    color: #fff;
     border: none;
     border-radius: 5px;
     color: black;
