--- a/frontend/src/Components/authComponent/Login.module.css
+++ b/frontend/src/Components/authComponent/Login.module.css
@@ -1,3 +1,4 @@
+@import url(../../index.css);
 .container{
     margin-top: 6rem;
     margin-left: 10rem;   
@@ -86,7 +87,7 @@
     margin-left: 3rem;
 }
 .heading_primary{
-    color: purple;
+    color: var(--color_primary_heading);
     font-size: 2.4rem;
     margin-left: 6rem;
     margin-top: 1rem;
@@ -100,11 +101,11 @@
 
 .last{
     border: none;
-    background-color: white;
+    background-color: #ffffff;
     cursor: pointer;
    margin-top: 2rem;
    margin-left: 7rem;
-   color: #2963b9;
+   color: var(--color-btnactive-background);
 }
 .login{
     padding: 6px 20px;
@@ -122,7 +123,7 @@
 }
 .login:hover {
     
-    background-color: #2971b9;
+    background-color:var(--color-btnactive-background);
     color: white;
 }
 
