--- a/frontend/src/Components/authComponent/WelcomePage.module.css
+++ b/frontend/src/Components/authComponent/WelcomePage.module.css
@@ -1,11 +1,5 @@
 
-*{
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
-    position: relative;
-}
+@import url('../../index.css');
 .container{
     width: 90%;
     height: 100%;
@@ -14,14 +8,12 @@
     position: absolute;
     display: flex;
     /* border: 2px solid #333; */
-
-
-box-shadow: 2px 2px 20px black;
+    box-shadow: 2px 2px 20px black;
 }
 .left{
-    width: 45rem;
+    width: 47rem;
     height: 100%;
-    background-image: linear-gradient(to right bottom, rgb(11, 76, 205), rgba(255, 255, 255, 1));
+    background-image: linear-gradient(to right bottom, var(--color-primary), var(--color-secondary));
     background-size: cover;
     position: relative;
 }
@@ -35,13 +27,8 @@ box-shadow: 2px 2px 20px black;
 .welcome{
     height: 100vh;
     width: 100%;
-    /* background-image: linear-gradient(to top left, rgba(0, 0, 255, 0.4), rgba(144, 10, 228, 0.3)); */
-    /* display: flex;
-    flex-direction: column; */
-    /* background-color:blue; */
     background-image: url(../../assets/background3.jpeg);
     background-size: cover;
-    /* background-repeat: no-repeat; */
     position: relative;
 }
 .heading_primary{
@@ -86,28 +73,27 @@ box-shadow: 2px 2px 20px black;
 }
 
 .btn {
-    
     padding: 10px 20px;
     margin: 10px;
     font-size: 16px;
     cursor: pointer;
-    background-color: #c6d4d2;
+    background-color:var(--color-btn-backGround);
     border: none;
     border-radius: 5px;
-    color: black;
+    color: var(--color-btn-text);
     transition: all .3s ease-in;
 }
 .btn:hover {
-    background-color: #5b29b9;
-    color: white;
+    background-color: var(--color-btnhover-background);
+    color:var(--color-btnhover-text);
 }
 
 .btn:active {    
     transform: translateY(-0.8rem);
 }
 #btnactive{
-    background-color: #295eb9;
-    color: white;
+    background-color: var(--color-btnactive-background);
+    color: var(--color_btnactive_text);
 }
 .right{
     width: 49rem;
