Fixed minor issues

--- a/frontend/src/Components/WelcomePage/FrontPage.module.css
+++ b/frontend/src/Components/WelcomePage/FrontPage.module.css
@@ -2,7 +2,7 @@
 .container {
   height: 90vh;
   width: 78.9%;
-  background-image: url(../../assets/headerFemale.jpg);
+  /* background-image: url(../../assets/headerFemale.jpg); */
   background-size: cover;
   /* background-repeat: no-repeat; */
   /* padding-right: 10rem; */
