--- a/frontend/src/UI/NavBar.module.css
+++ b/frontend/src/UI/NavBar.module.css
@@ -10,6 +10,11 @@
   background-color: rgb(253, 254, 255);
   border-bottom: 0.5px solid rgb(203, 198, 198, 0.6);
 }
+.logo {
+  height: 4rem;
+  width: 9rem;
+  background-color: red;
+}
 .innerContainer {
   width: 40rem;
   display: flex;
