--- a/frontend/src/Components/Appointments/AppointmentCard.module.css
+++ b/frontend/src/Components/Appointments/AppointmentCard.module.css
@@ -8,9 +8,73 @@
   border: 0.2px solid rgba(90, 84, 84, 0.3);
   justify-content: space-between;
 }
+.mainContainer {
+  display: flex;
+}
 .headingContent {
   margin-top: 1rem;
   margin-left: 3rem;
   margin-right: 3rem;
   font-weight: 550;
+  width: 8rem;
+}
+.button {
+  font-family: ui-monospace, SFMono-Regular, Menlo, Monaco, Consolas,
+    "Liberation Mono", "Courier New", monospace;
+  font-size: 0.7rem;
+  padding: 1em 2.7em;
+  font-weight: 500;
+  background: #345c94;
+  color: white;
+  border: none;
+  position: relative;
+  overflow: hidden;
+  border-radius: 0.6em;
+  cursor: pointer;
+}
+
+.gradient {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  left: 0;
+  top: 0;
+  border-radius: 0.6em;
+  margin-top: -0.25em;
+  background-image: linear-gradient(
+    rgba(110, 103, 103, 0),
+    rgba(0, 0, 0, 0),
+    rgba(0, 0, 0, 0.3)
+  );
+}
+
+.label {
+  position: relative;
+  top: -1px;
+}
+
+.transition {
+  transition-timing-function: cubic-bezier(0, 0, 0.2, 1);
+  transition-duration: 500ms;
+  background-color: rgba(16, 185, 129, 0.6);
+  border-radius: 9999px;
+  width: 0;
+  height: 0;
+  position: absolute;
+  left: 50%;
+  top: 50%;
+  transform: translate(-50%, -50%);
+}
+
+.button:hover .transition {
+  width: 14em;
+  height: 14em;
+}
+
+.button:active {
+  transform: scale(0.97);
+}
+.checkBlock {
+  margin-top: 1.4rem;
+  margin-left: 2rem;
 }
