--- a/frontend/src/Components/Doctor/DoctorProfilePatient/Appointmentform.module.css
+++ b/frontend/src/Components/Doctor/DoctorProfilePatient/Appointmentform.module.css
@@ -3,7 +3,7 @@
     border: solid 1px rgba(216,216,216,0.5);
     border-radius: 4px;
     font-family: 'Lato';
-    color: #787887;
+    color: var(--color-btnactive-background);
     width: 400px;
 }
 .innerloginform
@@ -33,7 +33,7 @@
     border: solid 1px black;
     border-radius: 4px;
     font-family: 'Lato';
-    color: #787887;
+    color: var(--color-btnactive-background);
     margin: 50px auto;
     border-radius: 5px;
 }
@@ -57,8 +57,36 @@
 }
 .book_button
 {
-    background-color:#F04E30;
+    background-color:var(--color-btnactive-background);
     height:40px;
     border:none;
+    color:white;
 
 }
+
+.book_button {
+    padding: 1.3em 3em;
+    font-size: 12px;
+    text-transform: uppercase;
+    letter-spacing: 2.5px;
+    font-weight: 500;
+    color: #000;
+    background-color: #fff;
+    border: none;
+    border-radius: 45px;
+    box-shadow: 0px 8px 15px rgba(0, 0, 0, 0.1);
+    transition: all 0.3s ease 0s;
+    cursor: pointer;
+    outline: none;
+  }
+  
+  .book_button:hover {
+    background-color: var(--color-btnactive-background);
+    box-shadow: 0px 15px 20px var(--color-btnactive-background);
+    color: #fff;
+    transform: translateY(-7px);
+  }
+  
+  .book_button:active {
+    transform: translateY(-1px);
+  }
