--- a/frontend/src/Components/Appointments/Appointment.module.css
+++ b/frontend/src/Components/Appointments/Appointment.module.css
@@ -3,3 +3,14 @@
   width: 100%;
   /* background-color: red; */
 }
+.appoint {
+  margin-top: 4rem;
+  text-align: center;
+  margin-left: -12rem;
+  text-transform: uppercase;
+  font-size: 1.2rem;
+  font-weight: 550;
+  color: var(--color-primary);
+  /* border-bottom: 3px solid var(--color-primary);
+} */
+}
