--- a/frontend/src/Components/Appointments/AppointmentCard.module.css
+++ b/frontend/src/Components/Appointments/AppointmentCard.module.css
@@ -13,10 +13,26 @@
 }
 .headingContent {
   margin-top: 1rem;
-  margin-left: 3rem;
+  margin-left: 2rem;
   margin-right: 3rem;
   font-weight: 550;
   width: 8rem;
+}
+.mainHeading {
+  margin-top: 1rem;
+  margin-left: 3rem;
+  width: 80%;
+  height: 3rem;
+  background-color: rgb(255, 255, 255);
+  display: flex;
+  border: 0.2px solid rgba(0, 0, 0, 0.3);
+  justify-content: space-between;
+}
+.headingContent {
+  margin-top: 1rem;
+  margin-left: 3rem;
+  margin-right: -1rem;
+  font-weight: 550;
 }
 .button {
   font-family: ui-monospace, SFMono-Regular, Menlo, Monaco, Consolas,
