--- a/frontend/src/Components/Patient/PatientProfile/PatientProfile.module.css
+++ b/frontend/src/Components/Patient/PatientProfile/PatientProfile.module.css
@@ -171,7 +171,7 @@
 }
 
 .leftdetails {
-  margin-top: -1rem;
+  margin-top: -3rem;
   height: 5rem;
   /* width: 14rem; */
   width: 100%;
@@ -184,8 +184,8 @@
   color: black;
 
   font-size: 1.2rem;
-  margin-top: 2rem;
-  margin-bottom: 2rem;
+  margin-bottom: 3rem;
+
   margin-left: 3rem;
   font-weight: 550;
 }
@@ -220,7 +220,9 @@
   display: flex;
   justify-content: space-between;
 }
-
+.submitting {
+  margin-left: 50rem;
+}
 /* button {
     position: relative;
     display: inline-block;
@@ -336,4 +338,5 @@ button:hover .button_text {
   color: black;
   width: 5rem;
   margin-right: 2rem;
+  margin-top: 0.2rem;
 }
