--- a/frontend/src/Components/Doctor/DoctorProfile/DoctorProfile.module.css
+++ b/frontend/src/Components/Doctor/DoctorProfile/DoctorProfile.module.css
@@ -336,3 +336,100 @@ button:hover .button_text {
   width: 5rem;
   margin-right: 2rem;
 }
+
+/*qualify*/
+.qualificationContainer {
+  margin-top: 3rem;
+  margin-left: 2.5rem;
+  height: 8rem;
+  width: 35rem;
+  /* background-color: red; */
+}
+
+.qualifyhead {
+  font-size: 1.3rem;
+  font-weight: 530;
+}
+.qualifyinput {
+  width: 30rem;
+  height: 5rem;
+  font-size: 1rem;
+  background-color: #dde7eb;
+  border-color: #8773a828;
+  border-radius: 35px;
+}
+
+.qualifyDetails {
+  text-transform: uppercase;
+  margin-top: 1rem;
+  font-size: 1rem;
+}
+.qualifymessage {
+  margin-top: 1rem;
+  text-align: center;
+  margin-left: -5rem;
+}
+.ratingContainer {
+  display: flex;
+  margin-top: 4rem;
+  margin-left: 2.5rem;
+}
+/*rating*/
+.star-rating {
+  unicode-bidi: bidi-override;
+  color: #ccc;
+  font-size: 30px;
+  position: relative;
+  display: inline-block;
+}
+
+.star-rating::before {
+  content: "★★★★★";
+}
+
+.star-rating::after {
+  content: "★★★★★";
+  color: #f90;
+  position: absolute;
+  top: 0;
+  left: 0;
+  overflow: hidden;
+  white-space: nowrap;
+  width: 0;
+}
+
+.star-rating[data-rating="1"]::after {
+  width: 20%;
+}
+
+.star-rating[data-rating="2"]::after {
+  width: 40%;
+}
+
+.star-rating[data-rating="3"]::after {
+  width: 60%;
+}
+
+.star-rating[data-rating="4"]::after {
+  width: 80%;
+}
+
+.star-rating[data-rating="5"]::after {
+  width: 100%;
+}
+
+.star-rating[data-rating="1.5"]::after {
+  width: 30%;
+}
+
+.star-rating[data-rating="2.5"]::after {
+  width: 50%;
+}
+
+.star-rating[data-rating="3.5"]::after {
+  width: 70%;
+}
+
+.star-rating[data-rating="4.5"]::after {
+  width: 90%;
+}
