--- a/frontend/src/Components/Doctor/DoctorList/DoctorCard.module.css
+++ b/frontend/src/Components/Doctor/DoctorList/DoctorCard.module.css
@@ -40,7 +40,7 @@
   margin: 0;
   padding: 0;
   font-family: 'Montserrat', sans-serif;
-  overflow-x: hidden;
+  overflow-y: hidden;
   color: var(--text);
   /* -webkit-text-size-adjust: none; */
 }
