--- a/frontend/src/Components/landingPage/LandingPage.module.css
+++ b/frontend/src/Components/landingPage/LandingPage.module.css
@@ -9,9 +9,9 @@
   margin-right: 1rem;
   border-radius: 1rem;
   height: 45rem;
-  background-color: var(--color-primary);
+  /* background-color: var(--color-primary); */
   position: relative;
-  box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
+  /* box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px; */
 }
 .logo {
   height: 4rem;
@@ -27,7 +27,7 @@
   margin-left: 4rem;
   margin-top: 4rem;
   border-radius: 1rem;
-  box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
+  /* box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px; */
 }
 .left {
   position: absolute;
